# mngr-copilot

./: README.md  pyproject.toml
imbue/mngr_copilot/: plugin.py
mngr_copilot/: plugin.py
