[project]
name = "imbue-mngr-copilot"
version = "0.1.0"
description = "Copilot agent type plugin for mngr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-mngr>=0.2.4",
]

[project.entry-points.mngr]
copilot = "mngr_copilot.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mngr_copilot"]
